fix navbar links underline, remove about me paragraph, fix mobile spacing home page

--- a/src/index.css
+++ b/src/index.css
@@ -155,14 +155,14 @@ b{
   content: "";
   position: absolute;
   height: 3px;
-  left: 5px;
+  left: 2px;
   bottom: 0;
   width: 0px;
   border-radius: 2px;
   transition: 0.3s;
 }
 .NavbarLinks a:hover:after{
-  width: 75%;
+  width: 83%;
 }
 
 .Hamburger{
@@ -299,7 +299,7 @@ b{
   .HomePage{
     display: block;
     text-align: center;
-    margin-top: 150px;
+    margin-top: 100px;
     padding: 25px;
   }
   .HomeText{
